tests/baselines/reference/parserGreaterThanTokenAmbiguity3.errors.txt
parserGreaterThanTokenAmbiguity3.ts(1,1): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'number'.
parserGreaterThanTokenAmbiguity3.ts(1,8): error TS1109: Expression expected.


==== parserGreaterThanTokenAmbiguity3.ts (2 errors) ====
    1 >/**/> 2;
    ~~~~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'number'.
           ~
!!! error TS1109: Expression expected.